--- a/Project4/templates/layout.html
+++ b/Project4/templates/layout.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <!-- Forces all relative paths to resolve from root -->
+    <base href="/" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/css/base.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/css/bootstrap.css') }}">
     <meta charset="UTF-8">
@@ -9,6 +11,8 @@
 </head>
 
 <body>
+    {% include 'navbar.html' %}
+
     {% block content %}
     {% endblock %}
 
