Finalized codebase concluding FASTAPI Course

--- a/Project4/templates/todo.html
+++ b/Project4/templates/todo.html
@@ -27,7 +27,7 @@
                         <td>{{loop.index}}</td>
                         <td>{{todo.title}}</td>
                         <td>
-                            <button onclick="window.location.href='edit-todo-page/{{todo.id}}'" type="button" ,
+                            <button onclick="window.location.href='/todo/edit-todo-page/{{todo.id}}'" type="button" ,
                                 class="btn btn-info">
                                 Edit
                             </button>
@@ -38,7 +38,7 @@
                         <td>{{loop.index}}</td>
                         <td class="strike-through-td">{{todo.title}}</td>
                         <td>
-                            <button onclick="window.location.href='edit-todo-page/{{todo.id}}'" type="button" ,
+                            <button onclick="window.location.href='/todo/edit-todo-page/{{todo.id}}'" type="button" ,
                                 class="btn btn-info">
                                 Edit
                             </button>
@@ -48,7 +48,7 @@
                     {% endfor %}
                 </tbody>
             </table>
-            <a href="add-todo-page" class="btn btn-primary">Add a new todo!</a>
+            <a href="todo/add-todo-page" class="btn btn-primary">Add a new todo!</a>
         </div>
     </div>
 </div>
